--- a/src/Components/display/display.css
+++ b/src/Components/display/display.css
@@ -3,4 +3,19 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    word-break: break-word;
+    overflow-wrap: break-word;
+    background-color: #808000;
+    padding: 15px;
+}
+
+.fade-in {
+  opacity: 0;
+  animation: fadeIn 0.5s ease-in forwards;
+}
+
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+  }
 }
