--- a/src/Components/submitBtn/submitBtn.css
+++ b/src/Components/submitBtn/submitBtn.css
@@ -2,10 +2,10 @@
     background-color: #808000;
     color: black;
     padding: 8px;
-    width: 10%;
     border-radius: 24px;
     font-weight: bold;
     cursor: pointer;
+    margin-bottom: 1.5%;
 }
 
 #submitBtn:hover {
